@@ -2,6 +2,9 @@
 
 Raptor Changes
 --------------
+* Improve correctness check for RowType columns.
+  Add specific validation checks for the individual fields when validating a row column.
+* Remove unused FilterVoidLambda interface in ArrayFilterFunction
 * Add table_supports_delta_delete property in Raptor to allow deletion happening in background. DELETE queries in Raptor can now delete data logically but relying on compactors to delete physical data.
 SPI Changes
 -----------
